refactor: movido arquivos de css, font alteracao na index.html

--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
 
     <link rel="dx-theme" data-theme="generic.light" href="css/dx.generic.custom-scheme-light.css" data-active="false">
     <link rel="dx-theme" data-theme="generic.dark" href="css/dx.generic.custom-scheme-dark.css" data-active="false">
+    <link rel="stylesheet" href="css/ravex.css">
 
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
